Add theoretical material

--- a/Рабочая тетрадь 1.ipynb
+++ b/Рабочая тетрадь 1.ipynb
@@ -1,12 +1,13 @@
 {
  "cells": [
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
     "# Рабочая тетрадь №1\n",
     "\n",
-    "# Теоретический материал\n",
+    "## Теоретический материал\n",
     "\n",
     "### Типы данных\n",
     "Все типы данных в Python относятся к одной из 2-х категорий:\n",
@@ -56,9 +57,24 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "# Теоретический материал\n",
+    "\n",
+    "### Условный оператор\n",
+    "\n",
+    "If – Условный оператор. В коде часто приходится проверять выполнимость или невыполнимость каких-то условий. Синтаксис:\n",
+    "<br>if <условие1 (булевское выражение)> :\n",
+    "<br>&nbsp;&nbsp;&nbsp;&nbsp;<код, который выполнится, если условие верно>\n",
+    "<br>elif <условие2 (булевское выражение)>:\n",
+    "<br>&nbsp;&nbsp;&nbsp;&nbsp;<код, который выполнится, если условие1 было неверно, а условие2 верно>\n",
+    "<br>else:\n",
+    "<br>&nbsp;&nbsp;&nbsp;&nbsp;<код, который выполнится, если условие1 и условие2 были неверны>\n",
+    "<p>Обратите внимание, что код, который должен выполняться внутри каждого условия, записывается с отступом в 4 пробела от уровня if, elif и else: в питоне области видимости переменных обозначаются отступами.\n",
+    "<br>То есть, отступы позволяют понять, где начинается код, который должен выполняться при выполнении условия в if, и где заканчивается.\n",
+    "\n",
     "## Задание 2.2\n",
     "\n",
     "Напишите код. Задается х, напечатать какому из интервалов\n",
@@ -96,9 +112,26 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "# Теоретический материал\n",
+    "\n",
+    "### Циклы, массивы, срезы\n",
+    "\n",
+    "Циклы - for и while. Цикл while проверяет истинность условия, и если условие истинно, то выполняет инструкции цикла.\n",
+    "<br>Синтаксис:\n",
+    "<br>while условие:\n",
+    "<br>&nbsp;&nbsp;&nbsp;&nbsp;инструкции\n",
+    "<p>Инструкции, которые относятся к циклу while, располагаются на последующих строках и должны иметь отступ от начала ключевого слова while.\n",
+    "<br>Цикл for проходит по набору значений, помещает каждое значение в переменную с которой в цикле можно производить различные действия.\n",
+    "<br>Синтаксис:\n",
+    "<br>for переменная in набор_значений:\n",
+    "<br>&nbsp;&nbsp;&nbsp;&nbsp;инструкции\n",
+    "<p>После ключевого слова for идет название переменной, в которую будут помещаться значения. После оператора in указывается набор значений и двоеточие. Инструкции, которые относятся к циклу,  асполагаются на последующих строках и должны иметь отступ.\n",
+    "<p>При создании цикла удобно пользоваться функцией range(a, b), которая создает последовательность чисел от a до b-1.\n",
+    "\n",
     "## Задание 3.3.1\n",
     "\n",
     "Выведите числа из примера на while (3.2.1) в обратном порядке."
@@ -242,9 +275,22 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "# Теоретический материал\n",
+    "\n",
+    "### Библиотеки\n",
+    "\n",
+    "Машинное обучение опирается на фундаментальные понятия и законы математики и информатики. Библиотека математических функций (math) применяется при решении большинства прикладных задач анализа данных. Также, и некоторые другие библиотеки Python содержат математические функции (например, NumPy). Важную роль играет библиотека matplotlib, которая позволяет производить визуализацию расчетов в удобной для восприятия человеком форме: графики, диаграммы, гистограммы.\n",
+    "<p>Подключение библиотек – синтаксис:\n",
+    "<br>import math as m\n",
+    "<br>import numpy as np\n",
+    "<br>import matplotlib.pyplot as plt\n",
+    "<br>etc...\n",
+    "<p>Библиотеки в python содержат не только функции, позволяющие решать различные задачи, но и некоторые популярные константы, например число Эйлера.\n",
+    "\n",
     "## Задание 4.3.1\n",
     "\n",
     "Задайте массив случайных значений из интервала(0; 1).\n",
@@ -255,7 +301,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -265,7 +311,7 @@
      "traceback": [
       "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
       "\u001b[1;31mModuleNotFoundError\u001b[0m                       Traceback (most recent call last)",
-      "Cell \u001b[1;32mIn[1], line 2\u001b[0m\n\u001b[0;32m      1\u001b[0m \u001b[39mimport\u001b[39;00m \u001b[39mrandom\u001b[39;00m \u001b[39mas\u001b[39;00m \u001b[39mr\u001b[39;00m\n\u001b[1;32m----> 2\u001b[0m \u001b[39mimport\u001b[39;00m \u001b[39mnumpy\u001b[39;00m \u001b[39mas\u001b[39;00m \u001b[39mn\u001b[39;00m\n\u001b[0;32m      3\u001b[0m \u001b[39mimport\u001b[39;00m \u001b[39mmatplotlib\u001b[39;00m\u001b[39m.\u001b[39;00m\u001b[39mpyplot\u001b[39;00m \u001b[39mas\u001b[39;00m \u001b[39mplt\u001b[39;00m\n\u001b[0;32m      5\u001b[0m \u001b[39m# Генерация 11 случайных чисел\u001b[39;00m\n",
+      "Cell \u001b[1;32mIn[3], line 2\u001b[0m\n\u001b[0;32m      1\u001b[0m \u001b[39mimport\u001b[39;00m \u001b[39mrandom\u001b[39;00m \u001b[39mas\u001b[39;00m \u001b[39mr\u001b[39;00m\n\u001b[1;32m----> 2\u001b[0m \u001b[39mimport\u001b[39;00m \u001b[39mnumpy\u001b[39;00m \u001b[39mas\u001b[39;00m \u001b[39mn\u001b[39;00m\n\u001b[0;32m      3\u001b[0m \u001b[39mimport\u001b[39;00m \u001b[39mmatplotlib\u001b[39;00m\u001b[39m.\u001b[39;00m\u001b[39mpyplot\u001b[39;00m \u001b[39mas\u001b[39;00m \u001b[39mplt\u001b[39;00m\n\u001b[0;32m      5\u001b[0m \u001b[39m# Генерация 11 случайных чисел\u001b[39;00m\n",
       "\u001b[1;31mModuleNotFoundError\u001b[0m: No module named 'numpy'"
      ]
     }
