Changes in 1 and 2

--- a/Рабочая тетрадь 2.ipynb
+++ b/Рабочая тетрадь 2.ipynb
@@ -7,9 +7,26 @@
    "source": [
     "# Рабочая тетрадь №2\n",
     "\n",
-    "# Теоретический материал\n",
+    "## Теоретический материал\n",
     "\n",
+    "### Библиотека NumPy\n",
     "\n",
+    "NumPy (<b>Num</b>erical<b>Py</b>thon) - это библиотека Python с открытым исходным кодом, которая используется практически во всех областях науки и техники. Это универсальный стандарт для работы с числовыми данными в Python.\n",
+    "<p>Если у вас уже есть Python, вы можете установить NumPy с помощью\n",
+    "командной строки:\n",
+    "<br>&nbsp;&nbsp;pip install numpy\n",
+    "<p>Чтобы начать использовать NumPy необходимо импортировать соответствующую библиотеку:\n",
+    "<br>&nbsp;&nbsp;import numpy as np\n",
+    "<p>Основным объектом NumPy является однородный многомерный массив (в numpy называется numpy.ndarray). Это многомерный массив элементов (обычно чисел), одного типа.\n",
+    "<p>Наиболее важные атрибуты объектов ndarray:\n",
+    "<br><b>ndarray.ndim</b> - число измерений (чаще их называют \"оси\") массива.\n",
+    "<br><b>ndarray.shape</b> - размеры массива, его форма. Это кортеж натуральных чисел, показывающий длину массива по каждой оси. Для матрицы из n строк и m столбов, shape будет (n,m). Число элементов кортежа shape равно ndim.\n",
+    "<br><b>ndarray.size</b> - количество элементов массива. Очевидно, равно произведению всех элементов атрибута shape.\n",
+    "<br><b>ndarray.dtype</b> - объект, описывающий тип элементов массива. Можно определить dtype, используя стандартные типы данных Python. NumPy здесь предоставляет целый букет возможностей, как встроенных, например: bool_, character, int8, int16, int32, int64, float8, float16, float32, float64, complex64, object_, так и возможность определить собственные типы данных, в том числе и составные.\n",
+    "<br><b>ndarray.itemsize</b> - размер каждого элемента массива в байтах.\n",
+    "<br><b>ndarray.data</b> - буфер, содержащий фактические элементы массива.\n",
+    "<p>Обычно не нужно использовать этот атрибут, так как обращаться к элементам массива проще всего с помощью индексов.\n",
+    "<p>Подробнее о массивах в NumPy можно найти в официальной документации https://numpy.org/doc/stable/user/absolute_beginners.html\n",
     "\n",
     "## Задание 1.3.1\n",
     "\n",
@@ -19,7 +36,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
@@ -80,7 +97,7 @@
    "source": [
     "import numpy as np\n",
     "\n",
-    "matrix = np.arange(5).reshape(5, 1) + np.zeros((1, 5))\n",
+    "matrix = np.arange(5).reshape(5, 1) + np.zeros(5)\n",
     "print(matrix)"
    ]
   },
@@ -136,7 +153,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -239,6 +256,20 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "## Теоретический материал\n",
+    "\n",
+    "### Библиотека Pandas\n",
+    "\n",
+    "Первым шагом в любом начинании в области машинного обучения является введение исходных данных в систему. Исходные данные могут вводиться вручную, содержаться в файле или храниться в интернете в каком-либо формате. Кроме того, часто требуется получить данные из нескольких источников.\n",
+    "<p><i>Библиотека pandas</i> – это удобный и быстрый инструмент для работы с данными, обладающий большим функционалом. Если очень кратко, то <i>pandas</i> – это библиотека, которая предоставляет очень удобные с точки зрения использования инструменты для  ранения данных и работе с ними.\n",
+    "<p><i>Библиотека pandas</i> присутствует в стандартной поставке Anaconda. Если же ее там нет, то его можно установить отдельно. Для этого введите командной строке:\n",
+    "<br>&nbsp;&nbsp;pip install pandas\n",
+    "<br>Для импорта библиотеки используйте команду:\n",
+    "<br>&nbsp;&nbsp;import pandas as pd\n",
+    "Библиотека pandas предоставляет две ключевые структуры данных: Series и DataFrame.\n",
+    "<p><b>Series</b> – это одномерная структура данных, ее можно представить, как таблицу с одной строкой. С Series можно работать как с обычным массивом (обращаться по номеру индекса), и как с ассоциированным массивом, когда можно использовать ключ для доступа к элементам данных.\n",
+    "<p><b>DataFrame</b> – это двумерная структура. Идейно она очень похожа на обычную таблицу, что выражается в способе ее создания и работе с ее элементами.\n",
+    "\n",
     "## Задание 2.3.1\n",
     "\n",
     "Найдите евклидово расстояние между двумя Series (точками) a и b, не\n",
@@ -273,8 +304,20 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
+   "source": [
+    "## Задание 2.3.2\n",
+    "\n",
+    "Найдите в Интернете ссылку на любой csv файл и сформируйте из него фрейм данных (например, коллекцию фреймов данных можно найти здесь: https://github.com/akmand/datasets)."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
    "source": []
   }
  ],
