--- a/Рабочая тетрадь 1.ipynb
+++ b/Рабочая тетрадь 1.ipynb
@@ -346,12 +346,17 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Задание 4.3.3\n",
+    "## Задание 4.3.2\n",
     "\n",
-    "Дана функция ... . Создать массив из 10 значений\n",
+    "Дана функция\n",
+    "$$\n",
+    "  \\frac{\\sqrt{1 + e^{\\sqrt{x}} + cosx^2}}{|1 - sin^3x|}\\ + ln|2x|.\n",
+    "$$\n",
+    "Создать массив из 10 значений\n",
     "функции (𝑥, например, изменяется от 1 до 10). Выделить срез первой\n",
     "половины массива и построить графики для основного массива –\n",
     "линейный и для среза – точечный"
@@ -426,15 +431,17 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
     "## Задание 4.3.3\n",
     "\n",
-    "Дана функция ... . Построить график на\n",
-    "интервале (0,10) с шагом 1 с заливкой площади и найти эту площадь\n",
-    "под ним. Для вычисления площади воспользуйте функции trapz(),\n",
-    "вычисляющей интеграл по правилу трапеции."
+    "Дана функция\n",
+    "$$\n",
+    "  |cos(xe^{(cos(x)+ln(x+1))})|.\n",
+    "$$\n",
+    "Построить график на интервале (0,10) с шагом 1 с заливкой площади и найти эту площадь под ним. Для вычисления площади воспользуйте функции trapz(), вычисляющей интеграл по правилу трапеции."
    ]
   },
   {
