--- a/Рабочая тетрадь 2.ipynb
+++ b/Рабочая тетрадь 2.ipynb
@@ -4,12 +4,6 @@
    "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
-   "source": []
-  },
-  {
-   "attachments": {},
-   "cell_type": "markdown",
-   "metadata": {},
    "source": [
     "# Рабочая тетрадь №2\n",
     "\n",
@@ -2239,7 +2233,223 @@
     "\n",
     "## Пример 3.2.1\n",
     "\n",
-    "Загрузить фрейм данных по ссылке: https://raw.githubusercontent.com/akmand/datasets/master/iris.csv. Необходимо выполнить нормализацию первого числового признака (sepal_length_cm) с использованием минимаксного преобразования, а второго (sepal_width_cm) с задействованием z-масштабирования."
+    "Задание:\n",
+    "<br>Прошкалируйте числовой признак в диапазон между двумя значениями."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[0.        ],\n",
+       "       [0.28571429],\n",
+       "       [0.35714286],\n",
+       "       [0.42857143],\n",
+       "       [1.        ]])"
+      ]
+     },
+     "execution_count": 13,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Загрузить библиотеки\n",
+    "import numpy as np\n",
+    "from sklearn import preprocessing\n",
+    "\n",
+    "# Создать признак\n",
+    "feature = np.array([[-500.5], [-100.1], [0], [100.1], [900.9]])\n",
+    "# Создать шкалировщик\n",
+    "minmax_scale = preprocessing.MinMaxScaler(feature_range = (0, 1))\n",
+    "\n",
+    "# Прошкалировать признак\n",
+    "scaled_feature = minmax_scale.fit_transform(feature)\n",
+    "\n",
+    "# Показать прошкалированный признак\n",
+    "scaled_feature"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Пример 3.2.2\n",
+    "\n",
+    "Задание:\n",
+    "<br>Преобразуйте признак, чтобы он имел среднее значение 0 и стандартное отклонение 1."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[-0.76058269],\n",
+       "       [-0.54177196],\n",
+       "       [-0.35009716],\n",
+       "       [-0.32271504],\n",
+       "       [ 1.97516685]])"
+      ]
+     },
+     "execution_count": 23,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "import numpy as np\n",
+    "from sklearn import preprocessing\n",
+    "\n",
+    "x = np.array([[-1000.1], [-200.2], [500.5], [600.6], [9000.9]])\n",
+    "# Создать шкалировщик\n",
+    "scaler = preprocessing.StandardScaler()\n",
+    "# Преобразовать признак\n",
+    "standardized = scaler.fit_transform(x)\n",
+    "# Показать признак\n",
+    "standardized"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Среднее: 0\n",
+      "Стандартное отклонение: 1.0\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(\"Среднее:\", round(standardized.mean()))\n",
+    "print(\"Стандартное отклонение:\", standardized.std())"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Пример 3.2.3\n",
+    "\n",
+    "Задание:\n",
+    "<br>Дан фрейм данных\n",
+    "<br>dfTest = pd.DataFrame({'A':[14.00,90.20,90.95,96.27,91.21],\n",
+    "<br>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;'B':[103.02,107.26,110.35,114.23,114.68],\n",
+    "<br>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;'C':['big','small','big','small','small']})\n",
+    "<br>Необходимо масштабировать его числовые столбцы."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>A</th>\n",
+       "      <th>B</th>\n",
+       "      <th>C</th>\n",
+       "      <th>8</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>103.02</td>\n",
+       "      <td>big</td>\n",
+       "      <td>0.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>0.926219</td>\n",
+       "      <td>107.26</td>\n",
+       "      <td>small</td>\n",
+       "      <td>0.363636</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>0.935335</td>\n",
+       "      <td>110.35</td>\n",
+       "      <td>big</td>\n",
+       "      <td>0.628645</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>1.000000</td>\n",
+       "      <td>114.23</td>\n",
+       "      <td>small</td>\n",
+       "      <td>0.961407</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>0.938495</td>\n",
+       "      <td>114.68</td>\n",
+       "      <td>small</td>\n",
+       "      <td>1.000000</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "          A       B      C         8\n",
+       "0  0.000000  103.02    big  0.000000\n",
+       "1  0.926219  107.26  small  0.363636\n",
+       "2  0.935335  110.35    big  0.628645\n",
+       "3  1.000000  114.23  small  0.961407\n",
+       "4  0.938495  114.68  small  1.000000"
+      ]
+     },
+     "execution_count": 27,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "import pandas as pd\n",
+    "from sklearn.preprocessing import MinMaxScaler\n",
+    "\n",
+    "scaler = MinMaxScaler()\n",
+    "\n",
+    "dfTest = pd.DataFrame({'A':[14.00,90.20,90.95,96.27,91.21],\n",
+    "                       'B':[103.02,107.26,110.35,114.23,114.68],\n",
+    "                       'C':['big', 'small', 'big', 'small', 'small']})\n",
+    "\n",
+    "dfTest[['A', '8']] = scaler.fit_transform(dfTest[['A', 'B']])\n",
+    "dfTest"
    ]
   },
   {
