--- a/Рабочая тетрадь 2.ipynb
+++ b/Рабочая тетрадь 2.ipynb
@@ -70,6 +70,7 @@
     "\n",
     "Задание:\n",
     "<br>Выполнить следующее:\n",
+    "\n",
     "1. Создать вектор (одномерный массив) размера 10, заполненный\n",
     "нулями.\n",
     "2. Создать вектор размера 10, заполненный единицами.\n",
@@ -128,6 +129,8 @@
     }
    ],
    "source": [
+    "import numpy as np\n",
+    "\n",
     "Z = np.random.random((10,10))\n",
     "Zmin, Zmax, Zmean = Z.min(), Z.max(), Z.mean()\n",
     "print(Zmin, Zmax, Zmean)"
@@ -146,12 +149,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[ 5  6  7  8  9]\n",
+      " [ 0  1  2  3  4]\n",
+      " [10 11 12 13 14]\n",
+      " [15 16 17 18 19]\n",
+      " [20 21 22 23 24]]\n"
+     ]
+    }
+   ],
    "source": [
+    "import numpy as np\n",
+    "\n",
     "A = np.arange(25).reshape(5,5)\n",
-    "A[[0, 1]] = A[[1, 0]]"
+    "A[[0, 1]] = A[[1, 0]]\n",
+    "print(A)"
    ]
   },
   {
@@ -172,7 +190,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -188,6 +206,8 @@
     }
    ],
    "source": [
+    "import numpy as np\n",
+    "\n",
     "print(0 * np.nan)\n",
     "print(np.nan == np.nan)\n",
     "print(np.inf > np.nan)\n",
@@ -208,7 +228,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -220,6 +240,8 @@
     }
    ],
    "source": [
+    "import numpy as np\n",
+    "\n",
     "arr = np.array([2, 1, 5, 3, 7, 4, 6, 8])\n",
     "print(np.sort(arr))"
    ]
